# Makefile for fpassword

BINDIR = /bin
MANDIR = /man/man1/
DATADIR = /etc

SRC = hydra-vnc.cpp hydra-pcnfs.cpp hydra-rexec.cpp hydra-nntp.cpp hydra-socks5.cpp \
      hydra-telnet.cpp hydra-cisco.cpp hydra-http.cpp hydra-ftp.cpp hydra-imap.cpp \
      hydra-pop3.cpp hydra-smb.cpp hydra-icq.cpp hydra-cisco-enable.cpp hydra-ldap.cpp \
      hydra-memcached.cpp hydra-mongodb.cpp hydra-mysql.cpp hydra-mssql.cpp hydra-xmpp.cpp \
      hydra-http-proxy-urlenum.cpp hydra-snmp.cpp hydra-cvs.cpp hydra-smtp.cpp \
      hydra-smtp-enum.cpp hydra-sapr3.cpp hydra-ssh.cpp hydra-sshkey.cpp hydra-teamspeak.cpp \
      hydra-postgres.cpp hydra-rsh.cpp hydra-rlogin.cpp hydra-oracle-listener.cpp \
      hydra-svn.cpp hydra-pcanywhere.cpp hydra-sip.cpp hydra-oracle.cpp hydra-vmauthd.cpp \
      hydra-asterisk.cpp hydra-firebird.cpp hydra-afp.cpp hydra-ncp.cpp hydra-rdp.cpp \
      hydra-oracle-sid.cpp hydra-http-proxy.cpp hydra-http-form.cpp hydra-irc.cpp \
      hydra-s7-300.cpp hydra-redis.cpp hydra-adam6500.cpp hydra-rtsp.cpp \
      hydra-rpcap.cpp hydra-radmin2.cpp hydra-cobaltstrike.cpp \
      hydra-time.cpp crc32.cpp d3des.cpp bfg.cpp ntlm.cpp sasl.cpp hmacmd5.cpp hydra-mod.cpp \
      hydra-smb2.cpp